<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@drawable/login_bg_image"
        android:focusable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/robotobold"
                android:text="Welcome!"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Register to Start Your Career!"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="Name"
                android:textColorHint="@color/gray"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:inputType="textCapSentences"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_background"
                        android:hint="Mobile Number"
                        android:fontFamily="@font/robotoregular"
                        android:layout_toRightOf="@+id/ccp"
                        android:textColorHint="@color/gray"
                        android:padding="10dp"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:inputType="number"/>

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_background"
                        android:hint="Email"
                        android:fontFamily="@font/robotoregular"
                        android:layout_toRightOf="@+id/ccp"
                        android:textColorHint="@color/gray"
                        android:padding="10dp"
                        android:maxLength="50"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="15dp"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linOtpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnResend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Resend OTP"
                    android:textAllCaps="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/robotobold"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/pink_background"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtExpire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Expires in:"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"/>

                <EditText
                    android:id="@+id/txtOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="Enter OTP"
                    android:textColorHint="@color/gray"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/robotoregular"
                    android:padding="10dp"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:inputType="number"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnGetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get OTP"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/robotobold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/pink_background"/>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/robotobold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/pink_background"/>

            <TextView
                android:id="@+id/otpMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/otpMessage"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_chat_black"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="45dp"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/AlreadyMember"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/lblSignHere"
                    android:fontFamily="@font/robotoregular"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="-40dp"
                android:src="@drawable/bottomregistatiomimg" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
